--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,92 +1,318 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Splash Sounds & Entertainment</title>
-  <link rel="stylesheet" href="STYLE.CSS">
-  
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Splash Sounds and Entertainment | Professional Event Services</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body>
+    <!-- Header -->
+    <header id="header">
+      <div class="container header-container">
+        <a href="#" class="logo">
+          <i class="fas fa-volume-up"></i>
+          <div class="logo-text">Splash <span>Sounds</span></div>
+        </a>
 
-  <header>
-    <h1>Splash Sounds & Entertainment</h1>
-    <nav>
-      <a href="#">About Us</a>
-      <a href="#">Our Services</a>
-      <a href="#">Contact Us</a>
-    </nav>
-  </header>
+        <button class="hamburger" id="hamburger">
+          <i class="fas fa-bars"></i>
+        </button>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Great Sound Entertainment</h2>
-      <p>We bring immersive sound and vibrant energy to every event. From weddings to house parties, our setups are designed to impress.</p>
-    </div>
-  </section>
+        <ul class="nav-links" id="nav-links">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </header>
 
-  <main>
-    <section id="services">
-      <h2>What We Offer</h2>
-      <div class="card-grid">
-        <div class="card">
-          <h3>Weddings</h3>
-          <p>Elegant sound setups for your special day.</p>
-        </div>
-        <div class="card">
-          <h3>Birthday Parties</h3>
-          <p>Fun and energetic sound to keep the party alive.</p>
-        </div>
-        <div class="card">
-          <h3>Funerals</h3>
-          <p>Respectful and clear audio for solemn occasions.</p>
-        </div>
-        <div class="card">
-          <h3>Engagements</h3>
-          <p>Celebrate love with beautiful soundscapes.</p>
-        </div>
-        <div class="card">
-          <h3>Movie Launches</h3>
-          <p>Professional audio for cinematic events.</p>
-        </div>
-        <div class="card">
-          <h3>House Parties</h3>
-          <p>Turn up the volume and let the vibes flow.</p>
+    <!-- Hero Section -->
+    <section class="hero" id="home">
+      <div class="container hero-content">
+        <h1>Elevate Your Event With Splash Sounds</h1>
+        <p>
+          Professional sound systems, talented DJs, and experienced event staff
+          for weddings, parties, corporate events, and more.
+        </p>
+        <div class="hero-btns">
+          <a href="#services" class="btn">Our Services</a>
+          <a href="#contact" class="btn btn-secondary">Book Now</a>
         </div>
       </div>
     </section>
 
-    <section id="equipment">
-      <h2>Professional DJs & Music Instruments</h2>
-      <div class="card-grid">
-        <div class="card">
-          <h3>Skilled DJs</h3>
-          <p>Our DJs know how to read the crowd and keep the energy flowing.</p>
-        </div>
-        <div class="card">
-          <h3>Mixers & Amplifiers</h3>
-          <p>Top-tier gear for flawless sound control.</p>
-        </div>
-        <div class="card">
-          <h3>Speakers & Subwoofers</h3>
-          <p>Powerful audio systems for any venue size.</p>
-        </div>
-        <div class="card">
-          <h3>Lighting & Effects</h3>
-          <p>Visuals that match the rhythm of your event.</p>
+    <!-- Services Section -->
+    <section class="services" id="services">
+      <div class="container">
+        <h2>Our Services</h2>
+        <div class="services-grid">
+          <div class="service-card">
+            <i class="fas fa-music service-icon"></i>
+            <h3>Sound System Rentals</h3>
+            <p>
+              High-quality audio equipment for events of all sizes, from
+              intimate gatherings to large festivals.
+            </p>
+          </div>
+
+          <div class="service-card">
+            <i class="fas fa-compact-disc service-icon"></i>
+            <h3>Professional DJs</h3>
+            <p>
+              Talented DJs who know how to read the crowd and keep the energy
+              high all night long.
+            </p>
+          </div>
+
+          <div class="service-card">
+            <i class="fas fa-users service-icon"></i>
+            <h3>Event Staffing</h3>
+            <p>
+              Experienced event staff to ensure your occasion runs smoothly from
+              setup to teardown.
+            </p>
+          </div>
         </div>
       </div>
     </section>
-  </main>
 
-  <footer>
-    <div class="contact">
-      <p><strong>CONTACT US NOW</strong></p>
-      <p>📞 +254 0718868294</p>
-      <p>📍 Eldoret, Kenya</p>
-    </div>
-    <p>&copy; 2025 Splash Sound Systems. All rights reserved.</p>
-  </footer>
+    <!-- Portfolio Section -->
+    <section class="portfolio" id="portfolio">
+      <div class="container">
+        <h2>Our Work</h2>
+        <div class="portfolio-grid">
+          <div class="portfolio-item">
+            <img
+              src="https://images.unsplash.com/photo-1511795409834-ef04bbd61622?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2069&q=80"
+              alt="Wedding Event"
+              class="portfolio-img"
+            />
+            <div class="portfolio-overlay">
+              <h3>Elegant Wedding Reception</h3>
+              <p>
+                Complete sound system with wireless mics and professional DJ
+                services
+              </p>
+            </div>
+          </div>
 
-</body>
+          <div class="portfolio-item">
+            <img
+              src="https://images.unsplash.com/photo-1533174072545-7a4b6ad7a6c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+              alt="Corporate Event"
+              class="portfolio-img"
+            />
+            <div class="portfolio-overlay">
+              <h3>Corporate Gala</h3>
+              <p>Full event production with stage setup, lighting, and audio</p>
+            </div>
+          </div>
+
+          <div class="portfolio-item">
+            <img
+              src="https://images.unsplash.com/photo-1567593810070-7a3c6cde5c5b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+              alt="Birthday Party"
+              class="portfolio-img"
+            />
+            <div class="portfolio-overlay">
+              <h3>Birthday Celebration</h3>
+              <p>DJ and sound system for a vibrant outdoor party</p>
+            </div>
+          </div>
+
+          <div class="portfolio-item">
+            <img
+              src="https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+              alt="Concert Event"
+              class="portfolio-img"
+            />
+            <div class="portfolio-overlay">
+              <h3>Live Concert</h3>
+              <p>
+                Full concert sound system with mixing and live audio engineering
+              </p>
+            </div>
+          </div>
+
+          <div class="portfolio-item">
+            <img
+              src="https://images.unsplash.com/photo-1501281668745-f7f57925c3b4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+              alt="Festival Event"
+              class="portfolio-img"
+            />
+            <div class="portfolio-overlay">
+              <h3>Music Festival</h3>
+              <p>Large-scale sound production for outdoor festivals</p>
+            </div>
+          </div>
+
+          <div class="portfolio-item">
+            <img
+              src="https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+              alt="Club Event"
+              class="portfolio-img"
+            />
+            <div class="portfolio-overlay">
+              <h3>Night Club Setup</h3>
+              <p>Premium club sound system with lighting effects</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
+      <div class="container">
+        <h2>Get In Touch</h2>
+        <div class="contact-container">
+          <div class="contact-info">
+            <h3>Contact Information</h3>
+            <div class="contact-details">
+              <div class="contact-detail">
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Kapseret, Eldoret, Kenya</p>
+              </div>
+              <div class="contact-detail">
+                <i class="fas fa-phone"></i>
+                <p>+254718868293</p>
+              </div>
+              <div class="contact-detail">
+                <i class="fas fa-envelope"></i>
+                <p>info@splashsounds.com</p>
+              </div>
+            </div>
+
+            <h3>Follow Us</h3>
+            <div class="social-links">
+              <a href="#" class="social-link"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="#" class="social-link"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+              <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+            </div>
+          </div>
+
+          <div class="contact-form">
+            <form id="contactForm">
+              <div class="form-group">
+                <label for="name">Your Name</label>
+                <input type="text" id="name" class="form-control" required />
+              </div>
+
+              <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="email" id="email" class="form-control" required />
+              </div>
+
+              <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" class="form-control" required />
+              </div>
+
+              <div class="form-group">
+                <label for="event-type">Event Type</label>
+                <select id="event-type" class="form-control" required>
+                  <option value="">Select Event Type</option>
+                  <option value="wedding">Wedding</option>
+                  <option value="corporate">Corporate Event</option>
+                  <option value="birthday">Birthday Party</option>
+                  <option value="concert">Concert</option>
+                  <option value="festival">Festival</option>
+                  <option value="other">Other</option>
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label for="event-date">Event Date</label>
+                <input
+                  type="date"
+                  id="event-date"
+                  class="form-control"
+                  required
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="message">Your Message</label>
+                <textarea
+                  id="message"
+                  class="form-control"
+                  placeholder="Tell us about your event..."
+                  required
+                ></textarea>
+              </div>
+
+              <button type="submit" class="btn">Send Message</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="footer-container">
+          <div class="footer-col">
+            <h3>Splash Sounds</h3>
+            <p>
+              Bringing energy and professionalism to events of all sizes with
+              premium sound systems and entertainment services.
+            </p>
+          </div>
+
+          <div class="footer-col">
+            <h3>Quick Links</h3>
+            <ul class="footer-links">
+              <li><a href="#home">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-col">
+            <h3>Services</h3>
+            <ul class="footer-links">
+              <li><a href="#">Sound System Rentals</a></li>
+              <li><a href="#">DJ Services</a></li>
+              <li><a href="#">Event Staffing</a></li>
+              <li><a href="#">Lighting Solutions</a></li>
+              <li><a href="#">Stage Setup</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-col">
+            <h3>Contact Info</h3>
+            <ul class="footer-links">
+              <li>
+                <i class="fas fa-map-marker-alt"></i> Kapseret, Eldoret, Kenya
+              </li>
+              <li><i class="fas fa-phone"></i> (+254) 718868293</li>
+              <li><i class="fas fa-envelope"></i> info@splashsounds.com</li>
+              <li><i class="fas fa-clock"></i> 24/7 services</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="copyright">
+          <p>
+            &copy; 2025 Splash Sounds and Entertainment. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+
+    <script src="script.js"></script>
+  </body>
 </html>
