--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <header id="header">
       <div class="container header-container">
         <a href="#" class="logo">
-          <i class="fas fa-volume-up"></i>
+          <!-- Replace the logo-image source with your actual logo -->
+          <img
+            src="splashlogo.jpg"
+            alt="Splash Sounds Logo"
+            class="logo-image"
+          />
           <div class="logo-text">Splash <span>Sounds</span></div>
         </a>
 
@@ -78,6 +83,15 @@
               setup to teardown.
             </p>
           </div>
+
+          <div class="service-card">
+            <i class="fas fa-lightbulb service-icon"></i>
+            <h3>Lighting Solutions</h3>
+            <p>
+              Professional lighting setups to create the perfect ambiance for
+              your event.
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -87,12 +101,9 @@
       <div class="container">
         <h2>Our Work</h2>
         <div class="portfolio-grid">
+          <!-- Replace these image sources with your actual event photos -->
           <div class="portfolio-item">
-            <img
-              src="https://images.unsplash.com/photo-1511795409834-ef04bbd61622?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2069&q=80"
-              alt="Wedding Event"
-              class="portfolio-img"
-            />
+            <img src="wedspl.jpg" alt="Wedding Event" class="portfolio-img" />
             <div class="portfolio-overlay">
               <h3>Elegant Wedding Reception</h3>
               <p>
@@ -103,11 +114,7 @@
           </div>
 
           <div class="portfolio-item">
-            <img
-              src="https://images.unsplash.com/photo-1533174072545-7a4b6ad7a6c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-              alt="Corporate Event"
-              class="portfolio-img"
-            />
+            <img src="bbspl.jpg" alt="Corporate Event" class="portfolio-img" />
             <div class="portfolio-overlay">
               <h3>Corporate Gala</h3>
               <p>Full event production with stage setup, lighting, and audio</p>
@@ -115,11 +122,7 @@
           </div>
 
           <div class="portfolio-item">
-            <img
-              src="https://images.unsplash.com/photo-1567593810070-7a3c6cde5c5b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-              alt="Birthday Party"
-              class="portfolio-img"
-            />
+            <img src="brtspl.jpg" alt="Birthday Party" class="portfolio-img" />
             <div class="portfolio-overlay">
               <h3>Birthday Celebration</h3>
               <p>DJ and sound system for a vibrant outdoor party</p>
@@ -127,11 +130,7 @@
           </div>
 
           <div class="portfolio-item">
-            <img
-              src="https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-              alt="Concert Event"
-              class="portfolio-img"
-            />
+            <img src="splsyt.jpg" alt="Concert Event" class="portfolio-img" />
             <div class="portfolio-overlay">
               <h3>Live Concert</h3>
               <p>
@@ -141,11 +140,7 @@
           </div>
 
           <div class="portfolio-item">
-            <img
-              src="https://images.unsplash.com/photo-1501281668745-f7f57925c3b4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-              alt="Festival Event"
-              class="portfolio-img"
-            />
+            <img src="system.jpg" alt="Festival Event" class="portfolio-img" />
             <div class="portfolio-overlay">
               <h3>Music Festival</h3>
               <p>Large-scale sound production for outdoor festivals</p>
@@ -153,11 +148,7 @@
           </div>
 
           <div class="portfolio-item">
-            <img
-              src="https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-              alt="Club Event"
-              class="portfolio-img"
-            />
+            <img src="splashsound.jpg" alt="Club Event" class="portfolio-img" />
             <div class="portfolio-overlay">
               <h3>Night Club Setup</h3>
               <p>Premium club sound system with lighting effects</p>
@@ -168,7 +159,6 @@
     </section>
 
     <!-- Contact Section -->
-    <!-- Contact Section -->
     <section class="contact" id="contact">
       <div class="container">
         <h2>Get In Touch</h2>
@@ -178,19 +168,19 @@
             <div class="contact-details">
               <div class="contact-detail">
                 <i class="fas fa-map-marker-alt"></i>
-                <p>Kapseret, Eldoret, Kenya</p>
+                <p>Nairobi, Kenya</p>
               </div>
               <div class="contact-detail">
                 <i class="fas fa-phone"></i>
-                <p>+254752307098</p>
+                <p>0752 307 098</p>
               </div>
               <div class="contact-detail">
                 <i class="fas fa-envelope"></i>
-                <p>info@splashsounds.com</p>
+                <p>info@splashsounds.co.ke</p>
               </div>
               <div class="contact-detail">
                 <i class="fab fa-whatsapp"></i>
-                <p>+254752307098</p>
+                <p>0752 307 098</p>
               </div>
             </div>
 
@@ -202,10 +192,10 @@
               <a href="#" class="social-link"
                 ><i class="fab fa-instagram"></i
               ></a>
-              <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+              <a href="#" class="social-link"><i class="fab fa-tiktok"></i></a>
               <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
               <a
-                href="https://wa.me/27752307098"
+                href="https://wa.me/254752307098"
                 class="social-link whatsapp-link"
                 target="_blank"
               >
@@ -217,7 +207,7 @@
               <h3>Quick Contact</h3>
               <p>Prefer to message us directly?</p>
               <a
-                href="https://wa.me/27752307098"
+                href="https://wa.me/254752307098"
                 class="btn whatsapp-btn"
                 target="_blank"
               >
@@ -301,7 +291,7 @@
             <h3>Splash Sounds</h3>
             <p>
               Bringing energy and professionalism to events of all sizes with
-              premium sound systems and entertainment services.
+              premium sound systems and entertainment services across Kenya.
             </p>
           </div>
 
@@ -329,19 +319,17 @@
           <div class="footer-col">
             <h3>Contact Info</h3>
             <ul class="footer-links">
-              <li>
-                <i class="fas fa-map-marker-alt"></i> Kapseret, Eldoret, Kenya
-              </li>
-              <li><i class="fas fa-phone"></i> (+254) 718868293</li>
-              <li><i class="fas fa-envelope"></i> info@splashsounds.com</li>
-              <li><i class="fas fa-clock"></i> 24/7 services</li>
+              <li><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya</li>
+              <li><i class="fas fa-phone"></i> 0752 307 098</li>
+              <li><i class="fas fa-envelope"></i> info@splashsounds.co.ke</li>
+              <li><i class="fas fa-clock"></i> Mon-Sun: 24/7 Available</li>
             </ul>
           </div>
         </div>
 
         <div class="copyright">
           <p>
-            &copy; 2025 Splash Sounds and Entertainment. All Rights Reserved.
+            &copy; 2024 Splash Sounds and Entertainment. All Rights Reserved.
           </p>
         </div>
       </div>
