--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
           </div>
 
           <div class="portfolio-item">
-            <img src="bbspl.jpg" alt="Corporate Event" class="portfolio-img" />
+            <img
+              src="bbspl.jpg"
+              alt="Corporate Event"
+              class="portfolio-img"
+            />
             <div class="portfolio-overlay">
               <h3>Corporate Gala</h3>
               <p>Full event production with stage setup, lighting, and audio</p>
@@ -140,7 +144,11 @@
           </div>
 
           <div class="portfolio-item">
-            <img src="system.jpg" alt="Festival Event" class="portfolio-img" />
+            <img
+              src="system.jpg"
+              alt="Festival Event"
+              class="portfolio-img"
+            />
             <div class="portfolio-overlay">
               <h3>Music Festival</h3>
               <p>Large-scale sound production for outdoor festivals</p>
@@ -148,7 +156,11 @@
           </div>
 
           <div class="portfolio-item">
-            <img src="splashsound.jpg" alt="Club Event" class="portfolio-img" />
+            <img
+              src="splashsound.jpg"
+              alt="Club Event"
+              class="portfolio-img"
+            />
             <div class="portfolio-overlay">
               <h3>Night Club Setup</h3>
               <p>Premium club sound system with lighting effects</p>
@@ -186,13 +198,13 @@
 
             <h3>Follow Us</h3>
             <div class="social-links">
-              <a href="#" class="social-link"
+              <a href="https://www.facebook.com/share/17QrUsx6j1/" class="social-link"
                 ><i class="fab fa-facebook-f"></i
               ></a>
-              <a href="#" class="social-link"
+              <a href="https://www.instagram.com/splash.sounds.entertainment?utm_source=qr&igsh=MTRkMWdsOHhnYzhxZQ==" class="social-link"
                 ><i class="fab fa-instagram"></i
               ></a>
-              <a href="#" class="social-link"><i class="fab fa-tiktok"></i></a>
+              <a href="https://www.tiktok.com/@splash.sounds.ent?_t=ZM-90cqsO5L10C&_r=1" class="social-link"><i class="fab fa-tiktok"></i></a>
               <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
               <a
                 href="https://wa.me/254752307098"
