--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <header id="header">
       <div class="container header-container">
         <a href="#" class="logo">
-          <!-- Replace the logo-image source with your actual logo -->
           <img
             src="splashlogo.jpg"
             alt="Splash Sounds Logo"
@@ -53,44 +52,108 @@
     </section>
 
     <!-- Services Section -->
+    <!-- Services Section -->
     <section class="services" id="services">
       <div class="container">
         <h2>Our Services</h2>
+        <p class="section-subtitle">
+          Premium entertainment solutions for unforgettable experiences
+        </p>
         <div class="services-grid">
           <div class="service-card">
-            <i class="fas fa-music service-icon"></i>
-            <h3>Sound System Rentals</h3>
-            <p>
-              High-quality audio equipment for events of all sizes, from
-              intimate gatherings to large festivals.
-            </p>
+            <div class="service-image">
+              <img
+                src="https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                alt="Professional Sound Systems"
+              />
+              <div class="service-overlay"></div>
+            </div>
+            <div class="service-content">
+              <i class="fas fa-music service-icon"></i>
+              <h3>Sound System Rentals</h3>
+              <p>
+                High-quality audio equipment for events of all sizes, from
+                intimate gatherings to large festivals.
+              </p>
+              <ul class="service-features">
+                <li>Premium speakers & amplifiers</li>
+                <li>Wireless microphone systems</li>
+                <li>Professional mixing consoles</li>
+                <li>On-site audio engineers</li>
+              </ul>
+            </div>
           </div>
 
           <div class="service-card">
-            <i class="fas fa-compact-disc service-icon"></i>
-            <h3>Professional DJs</h3>
-            <p>
-              Talented DJs who know how to read the crowd and keep the energy
-              high all night long.
-            </p>
+            <div class="service-image">
+              <img
+                src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80"
+                alt="Professional DJ Services"
+              />
+              <div class="service-overlay"></div>
+            </div>
+            <div class="service-content">
+              <i class="fas fa-compact-disc service-icon"></i>
+              <h3>Professional DJs</h3>
+              <p>
+                Talented DJs who know how to read the crowd and keep the energy
+                high all night long.
+              </p>
+              <ul class="service-features">
+                <li>Extensive music library</li>
+                <li>Custom playlists</li>
+                <li>MC services available</li>
+                <li>Interactive crowd engagement</li>
+              </ul>
+            </div>
           </div>
 
           <div class="service-card">
-            <i class="fas fa-users service-icon"></i>
-            <h3>Event Staffing</h3>
-            <p>
-              Experienced event staff to ensure your occasion runs smoothly from
-              setup to teardown.
-            </p>
+            <div class="service-image">
+              <img
+                src="https://images.unsplash.com/photo-1540575467063-178a50c2df87?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                alt="Event Staffing Services"
+              />
+              <div class="service-overlay"></div>
+            </div>
+            <div class="service-content">
+              <i class="fas fa-users service-icon"></i>
+              <h3>Event Staffing</h3>
+              <p>
+                Experienced event staff to ensure your occasion runs smoothly
+                from setup to teardown.
+              </p>
+              <ul class="service-features">
+                <li>Professional setup crew</li>
+                <li>Event coordination</li>
+                <li>Technical support</li>
+                <li>Equipment breakdown</li>
+              </ul>
+            </div>
           </div>
 
           <div class="service-card">
-            <i class="fas fa-lightbulb service-icon"></i>
-            <h3>Lighting Solutions</h3>
-            <p>
-              Professional lighting setups to create the perfect ambiance for
-              your event.
-            </p>
+            <div class="service-image">
+              <img
+                src="https://images.unsplash.com/photo-1501281668745-f7f57925c3b4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                alt="Stage Lighting for Entertainment"
+              />
+              <div class="service-overlay"></div>
+            </div>
+            <div class="service-content">
+              <i class="fas fa-lightbulb service-icon"></i>
+              <h3>Lighting Solutions</h3>
+              <p>
+                Professional lighting setups to create the perfect ambiance for
+                your event.
+              </p>
+              <ul class="service-features">
+                <li>LED stage lighting</li>
+                <li>Dance floor effects</li>
+                <li>Uplighting & spotlights</li>
+                <li>Custom lighting design</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -101,7 +164,6 @@
       <div class="container">
         <h2>Our Work</h2>
         <div class="portfolio-grid">
-          <!-- Replace these image sources with your actual event photos -->
           <div class="portfolio-item">
             <img src="wedspl.jpg" alt="Wedding Event" class="portfolio-img" />
             <div class="portfolio-overlay">
@@ -114,11 +176,7 @@
           </div>
 
           <div class="portfolio-item">
-            <img
-              src="bbspl.jpg"
-              alt="Corporate Event"
-              class="portfolio-img"
-            />
+            <img src="bbspl.jpg" alt="Corporate Event" class="portfolio-img" />
             <div class="portfolio-overlay">
               <h3>Corporate Gala</h3>
               <p>Full event production with stage setup, lighting, and audio</p>
@@ -144,11 +202,7 @@
           </div>
 
           <div class="portfolio-item">
-            <img
-              src="system.jpg"
-              alt="Festival Event"
-              class="portfolio-img"
-            />
+            <img src="system.jpg" alt="Festival Event" class="portfolio-img" />
             <div class="portfolio-overlay">
               <h3>Music Festival</h3>
               <p>Large-scale sound production for outdoor festivals</p>
@@ -156,11 +210,7 @@
           </div>
 
           <div class="portfolio-item">
-            <img
-              src="splashsound.jpg"
-              alt="Club Event"
-              class="portfolio-img"
-            />
+            <img src="splashsound.jpg" alt="Club Event" class="portfolio-img" />
             <div class="portfolio-overlay">
               <h3>Night Club Setup</h3>
               <p>Premium club sound system with lighting effects</p>
@@ -198,13 +248,21 @@
 
             <h3>Follow Us</h3>
             <div class="social-links">
-              <a href="https://www.facebook.com/share/17QrUsx6j1/" class="social-link"
+              <a
+                href="https://www.facebook.com/share/17QrUsx6j1/"
+                class="social-link"
                 ><i class="fab fa-facebook-f"></i
               ></a>
-              <a href="https://www.instagram.com/splash.sounds.entertainment?utm_source=qr&igsh=MTRkMWdsOHhnYzhxZQ==" class="social-link"
+              <a
+                href="https://www.instagram.com/splash.sounds.entertainment?utm_source=qr&igsh=MTRkMWdsOHhnYzhxZQ=="
+                class="social-link"
                 ><i class="fab fa-instagram"></i
               ></a>
-              <a href="https://www.tiktok.com/@splash.sounds.ent?_t=ZM-90cqsO5L10C&_r=1" class="social-link"><i class="fab fa-tiktok"></i></a>
+              <a
+                href="https://www.tiktok.com/@splash.sounds.ent?_t=ZM-90cqsO5L10C&_r=1"
+                class="social-link"
+                ><i class="fab fa-tiktok"></i
+              ></a>
               <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
               <a
                 href="https://wa.me/254752307098"
