--- a/index.html
+++ b/index.html
@@ -110,10 +110,7 @@
 
           <div class="service-card">
             <div class="service-image">
-              <img
-                src="https://images.unsplash.com/photo-1540575467063-178a50c2df87?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-                alt="Event Staffing Services"
-              />
+              <img src="/staffspl.jpg" alt="Event Staffing Services" />
               <div class="service-overlay"></div>
             </div>
             <div class="service-content">
