--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <div class="portfolio-item">
             <img src="bbspl.jpg" alt="Corporate Event" class="portfolio-img" />
             <div class="portfolio-overlay">
-              <h3>Corporate Gala</h3>
+              <h3>Golden Circle Celebration</h3>
               <p>Full event production with stage setup, lighting, and audio</p>
             </div>
           </div>
@@ -201,7 +201,7 @@
           <div class="portfolio-item">
             <img src="system.jpg" alt="Festival Event" class="portfolio-img" />
             <div class="portfolio-overlay">
-              <h3>Music Festival</h3>
+              <h3>Music systems</h3>
               <p>Large-scale sound production for outdoor festivals</p>
             </div>
           </div>
@@ -209,8 +209,8 @@
           <div class="portfolio-item">
             <img src="splashsound.jpg" alt="Club Event" class="portfolio-img" />
             <div class="portfolio-overlay">
-              <h3>Night Club Setup</h3>
-              <p>Premium club sound system with lighting effects</p>
+              <h3>Sound Systems</h3>
+              <p>Premium club sound system with quality sounds</p>
             </div>
           </div>
         </div>
