--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
           <div class="service-card">
             <div class="service-image">
-              <img src="/staffspl.jpg" alt="Event Staffing Services" />
+              <img src="staffspl.jpg" alt="Event Staffing Services" />
               <div class="service-overlay"></div>
             </div>
             <div class="service-content">
